feat(plugin): add administrator ratings
Refs Mininglamp-OSS/octo-admin#153
